--- a/package.json
+++ b/package.json
@@ -199,6 +199,7 @@
     "npm-install-checks",
     "npm-package-arg",
     "npm-packlist",
+    "npm-pick-manifest",
     "npm-profile",
     "npm-registry-client",
     "npm-user-validate",
